fixed alignment issue with social media icons in footer - effects #131

--- a/assets/sass/components/_footer.scss
+++ b/assets/sass/components/_footer.scss
@@ -98,6 +98,10 @@ footer[role="contentinfo"] {
 			&:nth-child(4) {
 				background-image: url("../images/footer-youtube_logo.png");
 			}
+			a {
+				width: 32px;
+				float: left;
+			}
 		}
 
 
